--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ django-phonenumber-field==7.0.1
 Django==4.1.4
 djangorestframework==3.14.0
 phonenumberslite==8.13.1
+pillow==9.3.0
 pip==21.3.1
 pytz==2022.6
 setuptools==60.2.0
