--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ phonenumberslite==8.13.1
 pillow==9.3.0
 pip==21.3.1
 pytz==2022.6
+python-dotenv==0.21.0
+psycopg2==2.9.5
 requests==2.28.1
 setuptools==60.2.0
 sqlparse==0.4.3
